k3s_cluster/base/dmz/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-bazarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-bazarr
  ports:
    - name: web
      protocol: TCP
      port: 6664
      targetPort: 6767
