k3s_cluster/base/dmz/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-bazarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.media.dmz.home`)
      # middlewares:
      #   - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-bazarr-service
          port: 6664
  #tls: {}
